Integrate fbs parsing

--- a/zerobuf/CMakeLists.txt
+++ b/zerobuf/CMakeLists.txt
@@ -4,8 +4,10 @@
 
 source_group(\\ FILES CMakeLists.txt)
 
+FLATC_TARGET(SCHEMER schema.fbs)
+
 set(ZEROBUF_PUBLIC_HEADERS ${COMMON_INCLUDES} world.h)
-set(ZEROBUF_HEADERS)
+set(ZEROBUF_HEADERS ${SCHEMER_OUTPUTS})
 set(ZEROBUF_SOURCES ${COMMON_SOURCES} world.cpp)
 set(ZEROBUF_LINK_LIBRARIES ${Boost_PROGRAM_OPTIONS_LIBRARY})
 
