--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
  - git --no-pager diff
 before_install:
  - sudo apt-get update -qq
+ - sudo apt-get install -qq abi-compliance-checker || /bin/true
  - sudo apt-get install -qq autoconf || /bin/true
  - sudo apt-get install -qq automake || /bin/true
  - sudo apt-get install -qq cmake || /bin/true
@@ -27,8 +28,16 @@ before_install:
  - sudo apt-get install -qq git-review || /bin/true
  - sudo apt-get install -qq git-svn || /bin/true
  - sudo apt-get install -qq lcov || /bin/true
+ - sudo apt-get install -qq libavahi-compat-libdnssd-dev || /bin/true
+ - sudo apt-get install -qq libboost-filesystem-dev || /bin/true
  - sudo apt-get install -qq libboost-program-options-dev || /bin/true
+ - sudo apt-get install -qq libboost-regex-dev || /bin/true
+ - sudo apt-get install -qq libboost-serialization-dev || /bin/true
+ - sudo apt-get install -qq libboost-system-dev || /bin/true
  - sudo apt-get install -qq libboost-test-dev || /bin/true
+ - sudo apt-get install -qq libhwloc-dev || /bin/true
+ - sudo apt-get install -qq libjpeg-turbo8-dev || /bin/true
+ - sudo apt-get install -qq libturbojpeg || /bin/true
  - sudo apt-get install -qq ninja-build || /bin/true
  - sudo apt-get install -qq pkg-config || /bin/true
  - sudo apt-get install -qq subversion || /bin/true
