--- a/zerobuf/CMakeLists.txt
+++ b/zerobuf/CMakeLists.txt
@@ -10,6 +10,10 @@ set(ZEROBUF_PUBLIC_HEADERS ${COMMON_INCLUDES} world.h)
 set(ZEROBUF_HEADERS ${SCHEMER_OUTPUTS})
 set(ZEROBUF_SOURCES ${COMMON_SOURCES} world.cpp)
 set(ZEROBUF_LINK_LIBRARIES ${LIBZMQ_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY})
+
+if(WIN32)
+  list(APPEND ZEROBUF_LINK_LIBRARIES ws2_32 mswsock)
+endif(WIN32)
 if(LINUX)
   list(APPEND ZEROBUF_LINK_LIBRARIES dl rt)
 endif()
